--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "inspector"
   ],
   "dependencies": {
-    "electron-debug": "^1.0.0"
+    "debug": "^4.1.1",
+    "electron-debug": "^1.0.0",
+    "electron-reload": "^1.5.0"
   },
   "devDependencies": {
     "devtron": "^1.1.0",
-    "electron": "^1.0.1",
+    "electron": "^8.2.3",
     "electron-packager": "^14.0.1",
     "xo": "^0.24.0"
   },
